# australia_rain

./: .gitignore  README.md  artifacts.dvc  dvc.yaml  next_steps.md  pyproject.toml
artifacts/: .gitignore  best_params.json  best_params.yaml  dropped_correlated_features.json  imputation_group_medians.json  preprocessing_pipeline.joblib
config/: config.yaml  features.yaml  main.yaml  paths.py  settings.yaml
config/process/: process1.yaml
data/: processed.dvc  raw.dvc
models/: model.joblib
notebooks/: debug.ipynb  exploration.ipynb  feature_engineering.ipynb  pipeline copy.ipynb  predictions.ipynb  protopipeline.ipynb
src/: create_inference_sample.py  evaluator.py  inference_sample_pipeline.py  main_train.py  predictions.py  preprocessing.py  preprocessors.py  processing.py  trainer.py  training.py  tuner.py
utils/: file_management.py  preprocessors.py
